@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/haskell-platform
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haskell-platform/ChangeLog,v 1.4 2010/03/14 18:58:30 kolmodin Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haskell-platform/ChangeLog,v 1.5 2011/12/11 20:20:31 slyfox Exp $
+
+*haskell-platform-2009.2.0.2-r1 (11 Dec 2011)
+
+  11 Dec 2011; Sergei Trofimovich <slyfox@gentoo.org>
+  +haskell-platform-2009.2.0.2-r1.ebuild, -haskell-platform-2009.2.0.2.ebuild:
+  Dont't use too strict depend range for regex-* libs.
 
   14 Mar 2010; Lennart Kolmodin <kolmodin@gentoo.org>
   haskell-platform-2009.2.0.2.ebuild:
